# newton-practice

./: LICENSE  README.md  environment.yml  newton.py  postBuild  setup.cfg
newton/tests/: test_newton.py
